--- a/lib/messagebundles/es.po
+++ b/lib/messagebundles/es.po
@@ -5,15 +5,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LimeWire Client\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-06-14 11:30-0400\n"
-"PO-Revision-Date: 2010-05-21 20:41+0000\n"
-"Last-Translator: sebikul <Unknown>\n"
+"POT-Creation-Date: 2010-06-21 11:30-0400\n"
+"PO-Revision-Date: 2010-06-19 18:36+0000\n"
+"Last-Translator: alex <Unknown>\n"
 "Language-Team: ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-06-15 03:33+0000\n"
+"X-Launchpad-Export-Date: 2010-06-22 03:33+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 # Es posible
