--- a/lib/messagebundles/hu.po
+++ b/lib/messagebundles/hu.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-06-14 11:30-0400\n"
-"PO-Revision-Date: 2010-05-16 11:36+0000\n"
-"Last-Translator: fergekolferol <ferge.kolferol@gmail.com>\n"
+"POT-Creation-Date: 2010-06-21 11:30-0400\n"
+"PO-Revision-Date: 2010-06-17 17:26+0000\n"
+"Last-Translator: BalintX <koczkahun@gmail.com>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-06-15 03:32+0000\n"
+"X-Launchpad-Export-Date: 2010-06-22 03:32+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/library/table/RemoveFromAllListAction.java:69
@@ -2115,7 +2115,7 @@ msgstr "{0} (torrent)"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/downloads/table/renderer/DownloadTitleRenderer.java:90
 msgid "Checking for AVG Anti-Virus updates"
-msgstr "AVG Anti-Vírus frissítések ellenőrzése"
+msgstr "AVG Antivírus frissítéseinek ellenőrzése"
 
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/downloads/table/renderer/DownloadTitleRenderer.java:93
 msgid "Updating AVG Anti-Virus"
