--- a/lib/messagebundles/pl.po
+++ b/lib/messagebundles/pl.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-06-14 11:30-0400\n"
-"PO-Revision-Date: 2010-06-11 21:48+0000\n"
-"Last-Translator: Aleksander Michalak <Unknown>\n"
+"POT-Creation-Date: 2010-06-21 11:30-0400\n"
+"PO-Revision-Date: 2010-06-15 19:04+0000\n"
+"Last-Translator: K0zi75 <Unknown>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2010-06-15 03:33+0000\n"
+"X-Launchpad-Export-Date: 2010-06-22 03:33+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: components/core-api/src/main/java/org/limewire/core/api/Category.java:14
@@ -85,10 +85,6 @@ msgstr "Programy"
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/search/SearchCategoryUtils.java:71
 msgid "Other"
 msgstr ""
-"Inne (plurar, feminine / singular, no genre)\r\n"
-"Inny (singular, masculine)\r\n"
-"Inna (singular, feminine)\r\n"
-"Inni (plurar, masculine)"
 
 #: components/core-api/src/main/java/org/limewire/core/api/Category.java:20
 #: private-components/swingui/src/main/java/org/limewire/ui/swing/util/FilePropertyKeyUtils.java:42
